--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,12 @@ header {
   text-align: center;
 }
 
+.container {
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
 /* Estilo padrão do menu */
 .menu {
   display: flex;
@@ -148,7 +154,7 @@ h1 {
 }
 
 .imagem-conteudo {
-  width: 80%;
+  width: 100%;
   max-width: 600px;
   height: auto;
   display: block;
@@ -225,6 +231,10 @@ footer {
 
 .formulario button:hover {
   background-color: #2ea52e;
+}
+
+.formulario .botao {
+  background-color: #8f8f8f;
 }
 
 .carrossel {
