--- a/css/style.css
+++ b/css/style.css
@@ -304,3 +304,29 @@ body.f4     {background-color: #E10600; }
 body.kart   header { background-color: #333333; } /* Neutro escuro para Kart */
 body.kart   {background-color: #333333; }
 .kart .menu {background-color: #FE5820;}
+
+/* Barra de leitura com carro de F1 */
+#container-barra-progresso {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 8px;
+  background-color: rgba(255, 255, 255, 0.2);
+  z-index: 9999;
+}
+
+#barra-progresso {
+  height: 100%;
+  background-color: white;
+  width: 0%;
+  position: relative;
+}
+
+#f1-carro {
+  position: absolute;
+  top: -16px;
+  right: -25px;
+  width: 50px;
+  height: auto;
+}
