--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,15 @@
+@charset "UTF-8";
+
 /* Estilo base para todas as páginas */
 
 body {
   margin: 0;
   padding: 0;
-  font-family: Arial, sans-serif;
+  font-family: 'Inter', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 16px;
   line-height: 1.6;
-  background-color: #e0e0e0;
-  color: #333;
+  background-color: #fff;
+  color: #222;
 }
 
 .banner {
@@ -149,8 +152,47 @@ main {
     border-bottom-right-radius: 10px;
 }
 
-h1 {
+h1, h2 {
+  font-weight: 700;
+  line-height: 1.2;
+  margin-bottom: 0.5em;
   color: #111;
+}
+
+h1 {
+  font-size: 2rem;
+  margin-top: 1em;
+}
+
+h2 {
+  font-size: 1.7rem;
+  margin-top: 1.5em;
+}
+
+p {
+  margin: 0 0 1em 0;
+  font-size: 1rem;
+  color: #333;
+}
+
+ul {
+  margin: 0 0 1em 1.5em;
+  padding: 0;
+  list-style-type: disc;
+}
+
+li {
+  margin-bottom: 0.5em;
+  line-height: 1.4;
+}
+
+body.contato h1, h3 {
+  text-align: center;
+}
+
+body.contato h3 {
+  font-size: 1.2rem;
+  
 }
 
 .imagem-conteudo {
@@ -169,6 +211,10 @@ footer {
   text-align: center;
   padding: 1rem;
   margin-top: 2rem;
+}
+
+footer p {
+  color: #fff;
 }
 
 /* Botão de voltar ao topo */
